# pyGRaTer_alpha

./: README.md  pyproject.toml
examples/: calculating_Q.ipynb  fluxes.ipynb  grain_temperatures.ipynb  making_images.ipynb  stars.ipynb
pyGrater/: SED.py  __init__.py  density.py  get_image.py  phase_functions.py  radiative_transfer.py  size_distributions.py  stargrains.py  utils.py
pyGrater.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
pyGrater/efficiencies/: aC_ACAR_size.txt  aC_ACAR_wav.txt
pyGrater/efficiencies/acar/: aC_ACAR_undersamp_wav.txt
pyGrater/filters/: filters.txt
pyGrater/filters/FILTERS/: 160_MIPS.txt  24_MIPS.txt  3.6_IRAC.txt  4.5_IRAC.txt  5.8_IRAC.txt  70_MIPS.txt  8_IRAC.txt  B.txt  B3.txt  H.txt  H_2MASS.txt  I.txt  Ic.txt  J.txt  J_2MASS.txt  K.txt  Ks_2MASS.txt  L.txt  Lp.txt  M.txt  PACS1.txt  PACS2.txt  PACS3.txt  R.txt  Rc.txt  SPIRE1.txt  SPIRE2.txt  SPIRE3.txt  STIS_50CCD.txt  U.txt  U3.txt  V.txt  V1.txt
pyGrater/optical_properties/: Enst_par.txt  Enst_per1.txt  Enst_per2.txt  aC_ACAR.txt  aC_ACAR_Qabs.txt  aC_ACAR_Qpr.txt  aC_ACAR_Qsca.txt  aC_ACAR_size.txt  astroSi.txt  silica_par.txt  silica_per.txt
pyGrater/parameters/: developper_params.yaml  general.yaml  material_list.txt  user_params.yaml  writing_yaml.py
pyGrater/star_data/: MSstars_properties_NextGen.txt  stars_main_properties.txt
pyGrater/star_data/NextGenSpectra/: 10000_3.5.txt  10000_4.0.txt  10000_4.5.txt  10000_5.0.txt  10000_5.5.txt  1600_5.5.txt  1700_3.5.txt  1700_4.0.txt  1700_4.5.txt  (+263 more)
pyGrater/tests/: calc_Q.py  calc_temp_range.py  get_Q.py
